[tool.poetry]
name = "bulkrax-import-versioner"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <mbagget1@utk.edu>"]
readme = "README.md"
packages = [{include = "bulkrax_import_versioner"}]

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
rdflib = "^6.2.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
